# wxPlot

./: README.md  wxPlot.sln
wxPlot/: CMakeLists.txt  Main.h  README.md  wxPlot.vcxproj  wxPlot.vcxproj.filters
wxPlot/src/: CMakeLists.txt  wxplot.cpp  wxplot.h  wxplot.hpp
wxPlot/src/frames/: CMakeLists.txt
wxPlot/src/frames/mainframe/: CMakeLists.txt  mainframe.cpp  mainframe.h  mainframe.hpp
wxPlot/src/plots/: CMakeLists.txt  plots.cpp  plots.h  plots.hpp
wxPlot/src/plots/plotfigures/: CMakeLists.txt  plotfigures.cpp  plotfigures.h  plotfigures.hpp
wxPlot/src/plots/plotfigures/2D/: 2Dfigure.cpp  2Dfigure.h  2Dfigure.hpp  CMakeLists.txt
wxPlot/src/plots/plotfigures/2D/histogram/: CMakeLists.txt  histogram.cpp  histogram.h  histogram.hpp
wxPlot/src/plots/plotfigures/2D/proportional/: CMakeLists.txt  proportional.cpp  proportional.h  proportional.hpp
wxPlot/src/plots/plottools/: CMakeLists.txt
wxPlot/src/plots/plottools/enums/: CMakeLists.txt  plotfigures.h  plottypes.h
wxPlot/src/plots/plottools/functions/: CMakeLists.txt  functions.cpp  functions.h  functions.hpp
wxPlot/src/plots/plottools/lists/: CMakeLists.txt  colours.h
wxPlot/src/plots/plottypes/: CMakeLists.txt  plottypes.cpp  plottypes.h  plottypes.hpp
wxPlot/src/plots/plottypes/2D/: 2Dtype.cpp  2Dtype.h  2Dtype.hpp  CMakeLists.txt
wxPlot/x64/Debug/: vc143.idb  wxPlot.exe.recipe
wxPlot/x64/Debug/wxPlot.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  wxPlot.lastbuildstate
(+180 files in other folders)
